Fixes #18346: Make the group option to include the Rudder server or not in the group more clear

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/server/server_details.html
@@ -18,7 +18,7 @@
                 <span class="ion ion-checkmark-round check-icon"></span>
               </label>
               <label for="typeQuery" class="form-control">
-                Include Rudder server components
+                Include Rudder root server components <span class="tooltipable glyphicon glyphicon-question-sign" title="Node(s) with Rudder web application or Rudder database"></span>
               </label>
             </div>
           </li>
