--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/databaseManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/administration/databaseManagement.html
@@ -2,6 +2,16 @@
 
 <head>
   <title>Rudder - Reports database</title>
+  <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-template.css"/>
+  <style>
+    .rudder-template > .one-col{
+      flex: 1;
+    }
+    .template-main{
+      flex-basis : initial !important;
+      flex: auto !important;
+    }
+  </style>
   <script type="text/javascript">
     // <![CDATA[
     var initReportDatepickler = function(selector) {
@@ -15,186 +25,201 @@
       });
       $.datepicker.setDefaults( $.datepicker.regional[ "en-GB" ] );
     };
-
     // ]]>
     </script>
 </head>
 
-  <div class="portlet">
-      <div class="lift:administration.DatabaseManagement.display">
+  <div class="rudder-template">
+    <div class="one-col">
+      <div class="main-header">
+        <div class="header-title">
+          <h1>
+            <span>Reports database</span>
+          </h1>
+        </div>
+      </div>
+      <div class="one-col-main">
+        <div class="template-main">
+          <div class="main-container">
+            <div class="main-details">
+              <div class="lift:administration.DatabaseManagement.display">
 
-        <div class="inner-portlet">
-          <div class="page-title">Active reports
-          </div>
-          <div class="callout-fade callout-info">
-            <div class="marker">
-              <span class="glyphicon glyphicon-info-sign"></span>
-            </div>
-            <div>
-              Active reports are stored in an SQL table with full indexing.
-              Storing large quantities may consume considerable disk space,
-              and generally slow Rudder down. Active reports are required
-              to calculate current compliance, and are available for problem
-              analysis in the "Technical logs" tab of a node's details.
-              <br/> <span style="text-decoration:underline">Note:</span>
-               When reports are archived or deleted, they are removed from
-               the active reports table. However, this will <b>not</b>
-               immediately free up disk space (but new active reports will
-               not use any extra space). See the Rudder User Documentation
-               to recover this space.
-            </div></div>
-          <div class="inner-portlet-content">
-            <table class="database-info-table">
-              <tr>
-                <td>Newest report:</td>
-                <td><b><span id="newestEntry">[Here
+                <div class="inner-portlet">
+                  <h3 class="page-title">Active reports
+                  </h3>
+                  <div class="callout-fade callout-info">
+                    <div class="marker">
+                      <span class="glyphicon glyphicon-info-sign"></span>
+                    </div>
+                    <div>
+                      Active reports are stored in an SQL table with full indexing.
+                      Storing large quantities may consume considerable disk space,
+                      and generally slow Rudder down. Active reports are required
+                      to calculate current compliance, and are available for problem
+                      analysis in the "Technical logs" tab of a node's details.
+                      <br/> <span style="text-decoration:underline">Note:</span>
+                      When reports are archived or deleted, they are removed from
+                      the active reports table. However, this will <b>not</b>
+                      immediately free up disk space (but new active reports will
+                      not use any extra space). See the Rudder User Documentation
+                      to recover this space.
+                    </div></div>
+                  <div class="inner-portlet-content">
+                    <table class="database-info-table">
+                      <tr>
+                        <td>Newest report:</td>
+                        <td><b><span id="newestEntry">[Here
                       comes the newest entry]</span></b></td>
-              </tr>
-              <tr>
-                <td>Oldest report:</td>
-                <td><b><span id="oldestEntry">[Here
+                      </tr>
+                      <tr>
+                        <td>Oldest report:</td>
+                        <td><b><span id="oldestEntry">[Here
                       comes the oldest entry]</span></b></td>
-              </tr>
-              <tr>
-                <td>Total disk space used by reports:</td>
-                <td><b><span id="databaseSize">[here
+                      </tr>
+                      <tr>
+                        <td>Total disk space used by reports:</td>
+                        <td><b><span id="databaseSize">[here
                       comes the database size]</span></b></td>
-              </tr>
-            </table>
-          </div>
-        </div>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
 
-        <div class="inner-portlet">
-          <div class="page-title">Archived reports</div>
-            <div class="callout-fade callout-info">
-              <div class="marker">
-                <span class="glyphicon glyphicon-info-sign"></span>
-              </div>
-              <div>
-                Archived reports are stored in an SQL table without any indexes,
-                thus providing a substantial saving on disk space required to
-                store them compared to the current reports above. Archived
-                reports will not be available in the "Technical logs" tab of
-                a node's details. However, they remain available for future
-                analysis by a plugin or an expert user.
-                <br/>  <span style="text-decoration:underline">Note:</span> When
-                archived reports are deleted, disk space is freed immediately.
-              </div>
-            </div>
-          <div class="inner-portlet-content">
-            <table class="database-info-table">
-              <tr>
-                <td>Newest archived report:</td>
-                <td><b><span id="newestArchivedEntry">[Here
+                <div class="inner-portlet">
+                  <h3 class="page-title">Archived reports</h3>
+                  <div class="callout-fade callout-info">
+                    <div class="marker">
+                      <span class="glyphicon glyphicon-info-sign"></span>
+                    </div>
+                    <div>
+                      Archived reports are stored in an SQL table without any indexes,
+                      thus providing a substantial saving on disk space required to
+                      store them compared to the current reports above. Archived
+                      reports will not be available in the "Technical logs" tab of
+                      a node's details. However, they remain available for future
+                      analysis by a plugin or an expert user.
+                      <br/>  <span style="text-decoration:underline">Note:</span> When
+                      archived reports are deleted, disk space is freed immediately.
+                    </div>
+                  </div>
+                  <div class="inner-portlet-content">
+                    <table class="database-info-table">
+                      <tr>
+                        <td>Newest archived report:</td>
+                        <td><b><span id="newestArchivedEntry">[Here
                       comes the newest archived entry]</span></b></td>
-              </tr>
-              <tr>
-                <td>Oldest archived report:</td>
-                <td><b><span id="oldestArchivedEntry">[Here
+                      </tr>
+                      <tr>
+                        <td>Oldest archived report:</td>
+                        <td><b><span id="oldestArchivedEntry">[Here
                       comes the oldest archived entry]</span></b></td>
-              </tr>
-              <tr>
-                <td>Total disk space used by archived reports:</td>
-                <td><b><span id="archiveSize">[here
+                      </tr>
+                      <tr>
+                        <td>Total disk space used by archived reports:</td>
+                        <td><b><span id="archiveSize">[here
                       comes the archive size]</span></b></td>
-              </tr>
-            </table>
-          </div>
-        </div>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
 
-    <div class="inner-portlet">
-          <div class="page-title">Automatic report cleaning</div>
-          <div class="inner-portlet-content">
-            <div class="callout-fade callout-info">
-              <div class="marker">
-                <span class="glyphicon glyphicon-info-sign"></span>
-              </div>
-              <div>
-                Regular archiving and deleting of reports can be set in the
-                Rudder configuration file (/opt/rudder/etc/rudder-web.properties).
-                <br/> Enabling regular archiving and deleting of old reports is
-                highly recommended, to avoid Rudder's disk usage growing forever.
-              </div>
-            </div>
-            <div class="automaticCleanDetail">
-              Automatic report archiving is <b><span id="autoArchiveStatus">
+                <div class="inner-portlet">
+                  <h3 class="page-title">Automatic report cleaning</h3>
+                  <div class="inner-portlet-content">
+                    <div class="callout-fade callout-info">
+                      <div class="marker">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                      </div>
+                      <div>
+                        Regular archiving and deleting of reports can be set in the
+                        Rudder configuration file (/opt/rudder/etc/rudder-web.properties).
+                        <br/> Enabling regular archiving and deleting of old reports is
+                        highly recommended, to avoid Rudder's disk usage growing forever.
+                      </div>
+                    </div>
+                    <div class="automaticCleanDetail">
+                      Automatic report archiving is <b><span id="autoArchiveStatus">
               [Here comes the report archiving status]</span></b>.
-              <span id="autoArchiveDetails"> All reports older than
+                      <span id="autoArchiveDetails"> All reports older than
               <b><span id="autoArchiveDays">[Here comes the automatic report
               archive age parameter]</span> days</b> will be archived regularly.
               </span>
-            </div>
-            <div class="automaticCleanDetail">
-              Automatic report deleting is <b><span id="autoDeleteStatus">[Here
+                    </div>
+                    <div class="automaticCleanDetail">
+                      Automatic report deleting is <b><span id="autoDeleteStatus">[Here
               comes the report deleting status]</span></b>.
-              <span id="autoDeleteDetails"> All reports older than
+                      <span id="autoDeleteDetails"> All reports older than
               <b><span id="autoDeleteDays">[Here comes the automatic report
               delete age parameter]</span> days</b> will be deleted regularly.
               </span>
-            </div>
-            <table id="automaticCleanDetails" class="database-info-table">
-              <tr>
-                <td>Frequency:</td>
-                <td><b><span id="cleanFrequency">[Here
+                    </div>
+                    <table id="automaticCleanDetails" class="database-info-table">
+                      <tr>
+                        <td>Frequency:</td>
+                        <td><b><span id="cleanFrequency">[Here
                       comes the archive cleaning job frequency]</span></b></td>
-              </tr>
-                <tr>
-                <td>Next run:</td>
-                <td><b><span id="nextRun">[Here comes the next run time for the archive cleaning job]</span></b></td>
-              </tr>
-            </table>
-          </div>
-        </div>
+                      </tr>
+                      <tr>
+                        <td>Next run:</td>
+                        <td><b><span id="nextRun">[Here comes the next run time for the archive cleaning job]</span></b></td>
+                      </tr>
+                    </table>
+                  </div>
+                </div>
 
-        <div class="inner-portlet">
-          <div class="page-title">Manual report cleaning</div>
-          <div class="inner-portlet-content">
-            <div class="callout-fade callout-info">
-              <div class="marker">
-                <span class="glyphicon glyphicon-info-sign"></span>
-              </div>
-              <div>
-                You can trigger a reports database cleaning in this section. If a
-                archive or delete process is already in progress, you will have to wait
-                until the cleaning process is idle.
-              </div>
-            </div>
-          <div class="automaticCleanDetail">
-              The archive process is <b id="archiveProgress">
-              [Here comes the report archiving progress]</b>.
-            </div>
-            <div class="automaticCleanDetail">
-              The delete process is <b id="deleteProgress">
-              [Here comes the report archiving progress]</b>.
-            </div>
-            <table class="database-info-table">
-              <tr>
-                <td colspan="2">
-                  <form class="lift:form.ajax">
-                    <div>
+                <div class="inner-portlet">
+                  <h3 class="page-title">Manual report cleaning</h3>
+                  <div class="inner-portlet-content">
+                    <div class="callout-fade callout-info">
+                      <div class="marker">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                      </div>
+                      <div>
+                        You can trigger a reports database cleaning in this section. If a
+                        archive or delete process is already in progress, you will have to wait
+                        until the cleaning process is idle.
+                      </div>
+                    </div>
+                    <div class="automaticCleanDetail">
+                      The archive process is <b id="archiveProgress">
+                      [Here comes the report archiving progress]</b>.
+                    </div>
+                    <div class="automaticCleanDetail">
+                      The delete process is <b id="deleteProgress">
+                      [Here comes the report archiving progress]</b>.
+                    </div>
+                    <table class="database-info-table">
+                      <tr>
+                        <td colspan="2">
+                          <form class="lift:form.ajax">
+                            <div>
                       <span id="cleanParam">
                         <span id="modeSelector"></span> all reports older than: <input id="reportFromDate" value="" />
                         <lift:authz role="administration_write">
                           <button id="archiveReports">Start cleaning reports</button>
                         </lift:authz>
                       </span>
-                      <span id="confirm"></span>
-                    </div>
-                    <lift:Msgs>
-                      <lift:error_msg class="error" ></lift:error_msg>
-                    </lift:Msgs>
-                  </form>
-                  <br/>
-                  <div id="cleanResult" style="display:none; float:left" class="callout-fade callout-success">
-                    <div class="marker"><span class="glyphicon glyphicon-ok"></span></div>
-                    <span id="cleanResultText"></span>
+                              <span id="confirm"></span>
+                            </div>
+                            <lift:Msgs>
+                              <lift:error_msg class="error" ></lift:error_msg>
+                            </lift:Msgs>
+                          </form>
+                          <br/>
+                          <div id="cleanResult" style="display:none; float:left" class="callout-fade callout-success">
+                            <div class="marker"><span class="glyphicon glyphicon-ok"></span></div>
+                            <span id="cleanResultText"></span>
+                          </div>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
-                </td>
-              </tr>
-            </table>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </lift:surround>
-
