fixup! Update webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
Co-authored-by: Alexis Mousset <contact@amousset.me>

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/secure/configurationManager/parameterManagement.html
@@ -2,7 +2,7 @@
 <lift:surround with="common-layout" at="content">
 
   <head>
-    <title>Rudder - Global Parameters</title>
+    <title>Rudder - Global parameters</title>
     <link type="text/css" rel="stylesheet" data-lift="with-cached-resource" href="/style/rudder/rudder-template.css"/>
     <style>
     .template-sidebar.sidebar-left{
@@ -96,4 +96,3 @@
   </div>
 
 </lift:surround>
-
